--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@vis.gl/react-google-maps": "^1.5.1",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
+    "embla-carousel-autoplay": "^8.5.2",
+    "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.0.11",
     "highlight.js": "^11.11.1",
     "quill": "^2.0.3",
